--- a/public/css/books.css
+++ b/public/css/books.css
@@ -1,1 +1,113 @@
-/* CSS for books.ejs */
+.nav-section{
+	background-color: #061629;
+	padding: 20px 40px;
+}
+.bars i{
+	font-size: 25px;
+}
+.bars i:hover{
+	color: rgb(13, 212, 179);
+}
+.site-logo{
+	color: #ffffff;
+	font-size: 18px;
+	font-weight: 600;
+	letter-spacing: 7px;
+}
+.site-logo:hover{
+	color: #ffffff;
+	text-decoration: none;	
+    background-color: transparent;
+}
+.nav-right{
+	font-size: 16px;
+	font-weight: 500;
+	align-items: center;
+}
+.nav-right a:hover{
+	color: rgb(13, 212, 179);
+}
+.nav-right ul{
+	list-style: none;
+}
+.nav-right li{
+	margin-right: 20px;
+}
+a{
+	text-decoration: none;
+	color: #ffffff;
+}
+a:hover{
+	text-decoration: none;
+	color: #ffffff;
+}
+button{
+	color: #ffffff;
+}
+button:focus{
+	outline: none;
+}
+.profile button{
+	outline: none;
+	border: none;
+	background-color: #061629;
+	color: #ffffff;
+	text-align: center;
+	font-size: 16px;
+	font-weight: 500;
+	padding: 8px 5px;
+}
+.profile .btn:hover{
+	color: rgb(13, 212, 179);
+}
+.dropdown-menu{
+	background-color: #061629;
+	text-align: center;
+}
+.add{
+	text-align: center;
+	width: 120px;
+	background-color: rgb(13, 212, 179);
+	border-radius: 25px;
+}
+.add a:hover{
+	color: #ffffff;
+	background-color: rgb(48, 184, 161);
+	border-radius: 25px;
+}
+.avbooks{
+	margin-top: 120px;
+	text-align: center;
+}
+.row{
+	display: flex; 
+	flex-wrap: wrap;
+}
+.caption{
+	margin: 5px auto;
+	text-align: center;
+	text-transform: capitalize;
+	font-family: 'Alegreya', serif;
+}
+.info{
+	text-align: center;
+	background-color: rgb(0, 207, 173);
+	border-radius: 25px;
+	width: 150px;
+	padding: 3px;
+	margin: auto auto;
+	font-size: 18px;
+	font-weight: 600;
+}.info:hover{
+	cursor: pointer;
+	background-color: rgb(48, 184, 161);
+}
+.thumbnail img{
+	height: 370px;
+	max-width: 100%;
+	max-height: 100%;
+	margin-bottom: 5px;
+}
+.books{
+	margin-bottom: 20px;
+}
