--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,26 +1,70 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login | OnMyBookshelf</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css"
+    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/user.css">
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">OnMyBookshelf</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<body>
+  <!-- <nav class="nav-section navbar navbar-expand-lg">
+    <a class="site-logo navbar-brand" href="#">OnMyBookshelf</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/register">SignUp <span class="sr-only">(current)</span></a>
-      </li>
-    </ul>
+    <div class="nav-right collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li> <a href="/register">SignUp <span class="sr-only">(current)</span></a> </li>
+      </ul>
+    </div>
+  </nav> -->
+  <div class="container">
+    <div class="row login-box">
+      <div class="col-sm-6 images">
+        <img class="img-1" src="https://images.unsplash.com/photo-1532012197267-da84d127e765?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="">
+      </div>
+      <div class="col-sm-6 login-content">
+        <div class="login-title">Member Login</div>
+
+        <form class="login-form" action="/login" method="POST">
+          <div class="login-info">
+            <div class="symbol">
+                <i class="fa fa-user"></i>
+            </div>
+            <div class="info">
+                <input type="text" class="input" name="username" placeholder="Username">
+            </div>
+        </div>
+        <div class="login-info">
+            <div class="symbol">
+                <i class="fa fa-lock"></i>
+            </div>
+            <div class="info">
+                <input type="password" class="input" name="password" placeholder="Password">
+            </div>
+        </div>
+          <div class="login-btn">
+            <button>Sign In</button>
+          </div>
+          <div class="login-new">
+            <a href="/register">New Here? Create an account <i class="fa fa-long-arrow-right"></i></a>
+          </div>
+          <div class="login-new">
+            <a href="#"><i class="fa fa-long-arrow-left"></i> BACK</a>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
-</nav>
 
-<h1>Login!!!</h1>
+</body>
 
-<form action="/login" method="POST">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <button>Sign Up</button>
-</form>
+</html>
