--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,5 +1,5 @@
 body{
-	background-color: rgba(250, 250, 250, 0.904);
+	background-color:  rgb(198, 233, 226);
 }
 /* Navbar */
 .nav-section{
@@ -23,7 +23,6 @@ body{
 .nav-right{
 	font-size: 16px;
 	font-weight: 500;
-	padding-left: 950px;
 }
 .nav-right a:hover{
 	color: rgb(13, 212, 179);
@@ -46,6 +45,12 @@ a:hover{
 	text-decoration: none;
 	color: #ffffff;
 }
+.bars i{
+	font-size: 25px;
+}
+.bars i:hover{
+	color: rgb(13, 212, 179);
+}
 
 /* Available Books */
 .avbooks{
@@ -59,11 +64,11 @@ table{
 	border-spacing: 0 100px;
 }
 td{
-	/* padding-bottom: 100px;  */
-	background-color: aliceblue;
+	background-color: rgb(241, 233, 233);
+	padding-right: 40px;
 }
 .avbooks .info{
-	padding-left: 70px;
+	padding-left: 50px;
 	font-size: 20px;
 	font-family: 'Barlow Semi Condensed', sans-serif;
 }
