--- a/views/books/books.ejs
+++ b/views/books/books.ejs
@@ -11,11 +11,12 @@
 
 <body>
 	<nav class="nav-section navbar navbar-expand-lg fixed-top">
+		<!-- <a class="site-logo navbar-brand" href="/books">ONMYBOOKSHELF</a> -->
 		<% if(!currentUser) { %>
-			<a class="site-logo navbar-brand" href="/">ONMYBOOKSHELF</a>
-		<% } else { %>
-			<a class="site-logo navbar-brand" href="/books">ONMYBOOKSHELF</a>
-		<% } %>
+            <a class="site-logo navbar-brand" href="/">ONMYBOOKSHELF</a>
+        <% } else { %>
+            <a class="site-logo navbar-brand" href="/books">ONMYBOOKSHELF</a>
+        <% } %>
 		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
 			data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 			aria-label="Toggle navigation">
