--- a/views/books/newbook.ejs
+++ b/views/books/newbook.ejs
@@ -171,7 +171,7 @@
 
 <body>
 	<nav class="nav-section navbar navbar-expand-lg fixed-top">
-		<a class="site-logo navbar-brand" href="#">ONMYBOOKSHELF</a>
+		<a class="site-logo navbar-brand" href="/books">ONMYBOOKSHELF</a>
 		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
 			data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 			aria-label="Toggle navigation">
