--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,23 +13,12 @@
 </head>
 
 <body>
-  <!-- <nav class="nav-section navbar navbar-expand-lg">
-    <a class="site-logo navbar-brand" href="#">OnMyBookshelf</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="nav-right collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li> <a href="/register">SignUp <span class="sr-only">(current)</span></a> </li>
-      </ul>
-    </div>
-  </nav> -->
   <div class="container">
     <div class="row login-box">
       <div class="col-sm-6 images">
-        <img class="img-1" src="https://images.unsplash.com/photo-1532012197267-da84d127e765?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="">
+        <img class="img-1"
+          src="https://images.unsplash.com/photo-1532012197267-da84d127e765?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
+          alt="">
       </div>
       <div class="col-sm-6 login-content">
         <div class="login-title">Member Login</div>
@@ -37,20 +26,20 @@
         <form class="login-form" action="/login" method="POST">
           <div class="login-info">
             <div class="symbol">
-                <i class="fa fa-user"></i>
+              <i class="fa fa-user"></i>
             </div>
             <div class="info">
-                <input type="text" class="input" name="username" placeholder="Username">
+              <input type="text" class="input" name="username" placeholder="Username">
             </div>
-        </div>
-        <div class="login-info">
+          </div>
+          <div class="login-info">
             <div class="symbol">
-                <i class="fa fa-lock"></i>
+              <i class="fa fa-lock"></i>
             </div>
             <div class="info">
-                <input type="password" class="input" name="password" placeholder="Password">
+              <input type="password" class="input" name="password" placeholder="Password">
             </div>
-        </div>
+          </div>
           <div class="login-btn">
             <button>Sign In</button>
           </div>
