Made final changes

--- a/public/show.css
+++ b/public/show.css
@@ -157,6 +157,9 @@
   .comment {
     text-align: justify;
   }
+  .time {
+    color: rgb(89, 89, 89)
+  }
 
   .btn-success {
     text-align: center;
